@@ -100,18 +100,20 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "General"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    LTEXT           "Target machine:",IDC_STATIC,6,6,53,8
-    LTEXT           "Static",IDC_TARGETMACHINE,78,6,189,8
-    LTEXT           "Checksum:",IDC_STATIC,6,18,36,8
-    LTEXT           "Static",IDC_CHECKSUM,78,18,189,8
-    LTEXT           "Subsystem:",IDC_STATIC,6,30,38,8
-    LTEXT           "Subsystem Version:",IDC_STATIC,6,42,64,8
-    LTEXT           "Characteristics:",IDC_STATIC,6,54,51,8
-    LTEXT           "Static",IDC_SUBSYSTEM,78,30,189,8
-    LTEXT           "Static",IDC_SUBSYSTEMVERSION,78,42,189,8
-    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,6,84,264,168
-    LTEXT           "Sections:",IDC_STATIC,6,72,30,8
-    EDITTEXT        IDC_CHARACTERISTICS,76,54,191,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    LTEXT           "Target machine:",IDC_STATIC,7,7,53,8
+    LTEXT           "Static",IDC_TARGETMACHINE,78,7,189,8
+    LTEXT           "Checksum:",IDC_STATIC,7,31,36,8
+    LTEXT           "Static",IDC_CHECKSUM,78,31,189,8
+    LTEXT           "Subsystem:",IDC_STATIC,7,43,38,8
+    LTEXT           "Subsystem Version:",IDC_STATIC,7,55,64,8
+    LTEXT           "Characteristics:",IDC_STATIC,7,67,51,8
+    LTEXT           "Static",IDC_SUBSYSTEM,78,43,189,8
+    LTEXT           "Static",IDC_SUBSYSTEMVERSION,78,55,189,8
+    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,94,260,155
+    LTEXT           "Sections:",IDC_STATIC,7,83,30,8
+    EDITTEXT        IDC_CHARACTERISTICS,76,67,191,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    LTEXT           "Time stamp:",IDC_STATIC,7,19,40,8
+    LTEXT           "Static",IDC_TIMESTAMP,78,19,189,8
 END
 
 IDD_PEIMPORTS DIALOGEX 0, 0, 274, 256
@@ -119,7 +121,7 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "Imports"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,6,6,264,246
+    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,7,260,242
 END
 
 IDD_PEEXPORTS DIALOGEX 0, 0, 274, 256
@@ -127,7 +129,7 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "Exports"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,6,6,264,246
+    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,7,260,242
 END
 
 IDD_LIBEXPORTS DIALOGEX 0, 0, 298, 256
